--- a/Ex7/app/src/main/AndroidManifest.xml
+++ b/Ex7/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Ex7"
         tools:targetApi="31">
         <activity
+            android:name=".MH3Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Mh2Activity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
